--- a/index.html
+++ b/index.html
@@ -82,18 +82,32 @@
         <div id="tab-subscriptions" class="tab-content">
             <div class="links-container">
                 <h2>لینک اشتراک عمومی</h2>
+                <p>این لینک‌ها را کپی کرده و در کلاینت خود (مانند V2RayNG) وارد کنید تا همه کانفیگ‌ها یکجا اضافه شوند.</p>
+                
                 <div class="link-group">
                     <h3>لینک پرسرعت (ابر آروان)</h3>
                     <small>https://v2v-data.s3.ir-thr-at1.arvanstorage.ir/configs.txt</small>
                     <div class="link-buttons">
                         <button class="link-btn copy-sub-btn" data-url="https://v2v-data.s3.ir-thr-at1.arvanstorage.ir/configs.txt">کپی لینک</button>
+                        <button class="link-btn qr-sub-btn" data-url="https://v2v-data.s3.ir-thr-at1.arvanstorage.ir/configs.txt">QR کد</button>
                     </div>
                 </div>
+
                 <div class="link-group">
                     <h3>لینک اصلی (GitHub)</h3>
                     <small>https://smbcryp.github.io/V2V/configs.txt</small>
                     <div class="link-buttons">
                         <button class="link-btn copy-sub-btn" data-url="https://smbcryp.github.io/V2V/configs.txt">کپی لینک</button>
+                        <button class="link-btn qr-sub-btn" data-url="https://smbcryp.github.io/V2V/configs.txt">QR کد</button>
+                    </div>
+                </div>
+
+                <div class="link-group">
+                    <h3>لینک کمکی (Vercel)</h3>
+                     <small>https://v2-v.vercel.app/configs.txt</small>
+                    <div class="link-buttons">
+                        <button class="link-btn copy-sub-btn" data-url="https://v2-v.vercel.app/configs.txt">کپی لینک</button>
+                        <button class="link-btn qr-sub-btn" data-url="https://v2-v.vercel.app/configs.txt">QR کد</button>
                     </div>
                 </div>
             </div>
