--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
         <footer>
             <ul class="footer-links">
-                <li><a href="https://github.com/SMBCRYP/V2V/" target="_blank">آدرس گیت‌هاب</a></li>
+                <li><a href="https://smbcryp.github.io/V2V/" target="_blank">آدرس گیت‌هاب</a></li>
                 <li><a href="https://v2-v.vercel.app/" target="_blank">آدرس ورسل</a></li>
                 <li><a href="http://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir" target="_blank">آدرس آروان</a></li>
             </ul>
